fixes mobile overflow ?

--- a/resources/css/style.css
+++ b/resources/css/style.css
@@ -9,6 +9,10 @@ body {
 }
 
 .body {
+	width: 100%;
+	max-width: 100%
+	height: 100vh;
+	max-height: 100vh;
 	overflow: hidden;	
 }
 
